--- a/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package.json
+++ b/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package.json
@@ -4,12 +4,14 @@
   "description": "Forkify Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "author": "Sriram Chandrabhatta",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.41.6"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {}
 }
