--- a/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package.json
+++ b/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open"
   },
   "author": "Sriram Chandrabhatta",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {}
 }
