141 Babel Configuration - Added 7.6 named as "A Modern Setup Configuring Babel"
README Update
- master links added for babel.html, index.js, test.js, package.json, bundle.js, babel.pdf (view and download) and tooling_changes_babel.html in Index at 7.6

--- a/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package.json
+++ b/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package.json
@@ -11,10 +11,15 @@
   "author": "Sriram Chandrabhatta",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/polyfill": "^7.8.3"
+  }
 }
