--- a/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package.json
+++ b/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package.json
@@ -20,6 +20,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.3"
+    "@babel/polyfill": "^7.8.3",
+    "axios": "^0.19.2"
   }
 }
