170 Forkify: Recipe View (Part 2) - Added 7.7.11.2 named as "Using 3rd Part API fractional to convert the Quantities into a Fraction & Highlighting the Selected Recipes using classList property"

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 JS-DOM/challenge
 Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/node_modules
 .gitignore
+Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/package-lock.json
